Fix z-index issue, add remaining routes

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -42,6 +42,7 @@ body {
 	min-height: 100vh;
 
 	> .main-content {
+		padding: 50px 0;
 		background-color: var(--color-content-bg);
 		color: var(--color-content-fg);
 	}
